# stellar-crowdFund

./: .gitignore  README.md
contract/crowdfunding/: Cargo.toml
contract/crowdfunding/src/: lib.rs
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  config.js  contract.js  event.js  styles.css  wallet.js
